// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformCss > case0 1`] = `
{
  ".alert": {
    "&-primary": {
      "css": {
        "color": "red",
      },
    },
    "&.alert-hover": {
      "&:hover": {
        "css": {
          "color": "blue",
        },
      },
    },
    "css": {
      "display": "grid",
      "width": "100%",
    },
  },
  "@media (min-width: 640px)": {
    ".alert": {
      "css": {
        "grid-auto-flow": "column",
        "grid-template-columns": "auto minmax(auto,1fr)",
        "justify-items": "start",
        "text-align": "left",
      },
    },
  },
}
`;

exports[`transformCss > case1 1`] = `
{
  ".alert": {
    "&-primary": {
      "apply": [
        "text-sm bg-red-200",
      ],
      "css": {
        "color": "red",
      },
    },
    "&.alert-hover": {
      "&:hover": {
        "apply": [
          "text-md",
        ],
        "css": {
          "color": "blue",
        },
      },
    },
    "apply": [
      "text-xs",
    ],
    "css": {
      "display": "grid",
      "width": "100%",
    },
  },
}
`;

exports[`transformCss > case2 1`] = `
{
  ".alert": {
    "apply": [
      "text-xs",
      "bg-primary text-primary-content [@media(hover:hover)]:hover:text-primary-content",
    ],
    "css": {
      "display": "grid",
      "width": "100%",
    },
  },
}
`;

exports[`transformCss > case3 1`] = `
{
  ".alert": {
    "apply": [
      "text-xs !important",
      "bg-primary text-primary-content [@media(hover:hover)]:hover:text-primary-content",
    ],
    "css": {
      "display": "grid !important",
      "width": "100%",
    },
  },
}
`;
